# route-auth-service

./: .gitignore  Cargo.toml  Dockerfile  README.md
doc/: flow.puml
docker/: docker-compose.prod.yaml  docker-compose.yaml
src/: main.rs
src/providers/: handlers.rs  mod.rs  models.rs  proxy.rs  token.rs
src/providers/consul/: conf.rs  implementation.rs  mod.rs
