[package]
name = "route-auth-service"
version = "0.1.0"
authors = ["red <red.avtovo@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = { version = "3.3.2" }

reqwest = { version = "0.11.3"}
serde_urlencoded = "0.7.0"
chrono = { version = "0.4.19", features = ["clock"] }

jsonwebtoken = "7"

uuid = { version = "0.8", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "*"

consul = "0.3.0"

log = "0.4.8"
env_logger = "0.8.2"
